--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://taeil:aU7nd1TDooaWHfSq@cluster0.zoyop.mongodb.net/
+ATLAS_URI=mongodb+srv://taeil:LqCVSvY3cXaAx87K@cluster0.zoyop.mongodb.net/
 PORT=5050
