--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # ATLAS_URI=mongodb+srv://taeil:LqCVSvY3cXaAx87K@cluster0.zoyop.mongodb.net/
 ATLAS_URI=mongodb+srv://compass:rRFbzqxTraMBaTQM@cluster0.zoyop.mongodb.net/
 PORT=5050
+PORT2=5051
