--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
